# beg-haskell

./: LICENSE.txt  README.md
appendixB/: appendixB.cabal
appendixB/src/: Main.hs
chapter1/: chapter1.cabal
chapter10/: chapter10.cabal
chapter10/src/: Args.hs  Main.hs
chapter10/src/Chapter10/: Builder.hs  Parser.hs  TypeClasses.hs  Types.hs
chapter11/: chapter11.cabal
chapter11/src/: Main.hs
chapter11/src/Chapter11/: Database.hs  Gender.hs  Query.hs  Update.hs
chapter12/: chapter12.cabal
chapter12/fay/: Simple.hs  Simple.html  ToScotty.hs  ToScotty.html
chapter12/src/: ScottyMain.hs  YesodMain.hs
chapter12/src/Chapter12/: Database.hs
chapter13/: chapter13.cabal
chapter13/src/Chapter13/: CategoriesFnDeps.hs  CategoriesTyFams.hs  CheckPresents.idr  CheckPresentsFnDeps.hs  CheckPresentsPromoted.hs  CheckPresentsTyFams.hs  CheckRangesPromoted.hs  Database.hs  DatabaseSpliced.hs  GADTs.hs  Initial.hs  ListL.idr  Numbers.hs  Numbers.idr  Tree.idr  Users.hs  VectorsLits.hs
chapter14/: chapter14.cabal  offer-description.html  uuagc_options
chapter14/src/: Main.hs
chapter14/src/Chapter14/: Description.ag  Expr.ag  Expr2.ag  ExprMonad.hs  ExprType.ag  OfferType.ag  Origami.hs  Presents.ag  SimpleNoAG.hs
chapter15/: chapter15.cabal
chapter15/src/Chapter15/: BinaryTree.hs  BinaryTreeFV.idr  RevFV.idr
chapter15/test/: HSpec.hs  Tasty.hs
chapter16/: chapter16.cabal
chapter16/src/Chapter16/: FreeMonads.hs
chapter2/: chapter2.cabal
chapter2/src/Chapter2/: DataTypes.hs  DefaultValues.hs  SimpleFunctions.hs
chapter3/: chapter3.cabal
chapter3/src/Chapter3/: Comprehensions.hs  FnsParams.hs  Lists.hs  MoreModules.hs  Origami.hs  ParamPoly.hs
chapter4/: chapter4.cabal
chapter4/src/Chapter4/: Containers.hs  FunctorsFoldables.hs  MinimumPrice.hs  TypeClasses.hs
chapter5/: .gitignore  chapter5.cabal  profiling-example.hp
chapter5/src/: Main.hs
chapter5/src/Chapter5/: Annotations.hs  Infinite.hs  Problems.hs
chapter6/: chapter6.cabal
chapter6/src/Chapter6/: CombinatorsState.hs  IncompleteData.hs  KMeans.hs  KMeansLens.hs  KMeansRWS.hs  KMeansState.hs  KMeansStateLens.hs  Lens.hs  Lens2.hs  ReaderWriter.hs  STRef.hs  StateLenses.hs  Vector.hs
chapter7/: chapter7.cabal
chapter7/src/Chapter7/: CombiningMonads.hs  Graph.hs  MonadPlus.hs  MoreThanOneValue.hs  UnderAMonad.hs
chapter7/src/Chapter7/APriori/: FirstImpl.hs  Types.hs  WithMonads.hs
chapter8/: chapter8.cabal
chapter8/src/: Distr.hs  Par.hs  Stm.hs
chapter8/src/Chapter8/APriori/: Par.hs  Par2.hs  Types.hs
chapter9/: chapter9.cabal
chapter9/src/: Basic.hs  Client.hs  Exceptions.hs  Server.hs  Streams.hs
chapter9/src/Chapter9/: Types.hs
